fdadi-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdadi-frontend
  namespace: fdadi
  labels:
    app: fdadi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdadi
  template:
    metadata:
      labels:
        app: fdadi
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: fdadi-frontend
          image: clearavenuedocker/fdadi-frontend:latest
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 90
            httpGet:
              path: /actuator/health
              port: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
          ports:
            - name: user-service
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: fdadi-frontend
  namespace: fdadi
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http-fdadi-frontend
  selector:
    app: fdadi
---
