deployment2.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: APP_NAME
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: SERVICE_NAME-BRANCH_NAME
  namespace: APP_NAME
  labels:
    app: APP_NAME
    version: BRANCH_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP_NAME
  template:
    metadata:
      labels:
        app: APP_NAME
        version: BRANCH_NAME
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: SERVICE_NAME-BRANCH_NAME
          image: DOCKER_USER/SERVICE_NAME:latest
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 90
            httpGet:
              path: LIVENESS_URL
              port: SERVICE_PORT
          readinessProbe:
            httpGet:
              path: READINESS_URL
              port: SERVICE_PORT
          ports:
            - name: SERVICE_NAME
              containerPort: SERVICE_PORT
---
kind: Service
apiVersion: v1
metadata:
  name: SERVICE_NAME
  namespace: APP_NAME
spec:
  ports:
    - port: SERVICE_PORT
      targetPort: SERVICE_PORT
      name: http-SERVICE_NAME
  selector:
    app: APP_NAME
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway-to-SERVICE_NAME-vs
spec:
  hosts:
  - "*"
  gateways:
  - "main-gateway"
  http:
  - match:
    - uri:
        prefix: "/APP_NAME/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 2s
    websocketUpgrade: true    
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: SERVICE_NAME-to-subset-vs
spec:
  hosts:
  - SERVICE_NAME.APP_NAME.svc.cluster.local
  gateways:
  - "main-gateway"
  http:
  - match:
    - uri:
      prefix: "/BRANCH_NAME/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        subset: BRANCH_NAME
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 2s
    websocketUpgrade: true
  - route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        subset: master
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: SERVICE_NAME-BRANCH_NAME
spec:
  host: SERVICE_NAME.APP_NAME.svc.cluster.local
  subsets:
  - name: BRANCH_NAME
    labels:
      version: BRANCH_NAME
