external-deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: APP_NAME
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: SERVICE_NAME-BRANCH_NAME
  namespace: APP_NAME
  labels:
    app: SERVICE_NAME
    version: BRANCH_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SERVICE_NAME
  template:
    metadata:
      labels:
        app: SERVICE_NAME
        version: BRANCH_NAME
    spec:
      serviceAccountName: SERVICE_NAME
      containers:
        - name: SERVICE_NAME-BRANCH_NAME
          image: DOCKER_USER/SERVICE_NAME:latest
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 90
            httpGet:
              path: /SERVICE_NAME/BRANCH_NAME/LIVENESS_URL
              port: SERVICE_PORT
          readinessProbe:
            httpGet:
              path: /SERVICE_NAME/BRANCH_NAME/READINESS_URL
              port: SERVICE_PORT
          ports:
            - name: http-front
              containerPort: SERVICE_PORT
            - name: http-user
              containerPort: 8082
            - name: http-med
              containerPort: 8083
            - name: mysql
              containerPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: SERVICE_NAME
  namespace: APP_NAME
spec:
  ports:
    - name: http-front
      port: SERVICE_PORT
  selector:
    app: SERVICE_NAME
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: SERVICE_NAME-BRANCH_NAME
  namespace: default
spec:
  hosts:
  - HOST_NAME
  - SERVICE_NAME.APP_NAME
  gateways:
  - "ingressgateway.istio-system"
  http:
  - match:
    - uri:
        prefix: "/SERVICE_NAME/BRANCH_NAME/"
    route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        subset: BRANCH_NAME
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: connect-failure,internal,500,503,5xx,reset 
  - route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        subset: master
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: connect-failure,internal,500,503,5xx,reset
  https:
  - match:
    - uri:
        prefix: "/SERVICE_NAME/BRANCH_NAME/"
    route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        subset: BRANCH_NAME
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: connect-failure,internal,500,503,5xx,reset,404
  - route:
    - destination:
        host: SERVICE_NAME.APP_NAME.svc.cluster.local
        subset: master
        port:
          number: SERVICE_PORT
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: connect-failure,internal,500,503,5xx,reset,404
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: SERVICE_NAME-BRANCH_NAME
  namespace: APP_NAME
spec:
  host: SERVICE_NAME.APP_NAME.svc.cluster.local
  subsets:
  - name: BRANCH_NAME
    labels:
      version: BRANCH_NAME
